// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTMLRender should render match to snapshot 1`] = `
<Component
  className="html-render"
>
  <div
    key="1"
    style={Object {}}
  >
    <b
      key="1"
      style={Object {}}
    >
      bold
    </b>
  </div>
  <div
    key="3"
    style={Object {}}
  >
    <i
      key="1"
      style={Object {}}
    >
      italic
    </i>
  </div>
  <div
    key="5"
    style={Object {}}
  >
    <u
      key="1"
      style={Object {}}
    >
      underline
    </u>
  </div>
  <Component
    key="7"
    style={Object {}}
  >
    heading
  </Component>
  <div
    key="9"
    style={Object {}}
  >
    <ul
      key="1"
      style={Object {}}
    >
      <li
        key="1"
        style={Object {}}
      >
        bullet points
      </li>
      <li
        key="3"
        style={Object {}}
      >
        bullet points
      </li>
    </ul>
  </div>
</Component>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag a 1`] = `
<a
  key="0"
  rel="noopener"
  style={Object {}}
  target="_blank"
>
  Test Text
</a>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag b 1`] = `
<b
  key="0"
  style={Object {}}
>
  Test Text
</b>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag blockquote 1`] = `
<blockquote
  key="0"
  style={Object {}}
>
  Test Text
</blockquote>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag h1 1`] = `
<h4
  className="title is-4  "
  id=""
>
  Test Text
</h4>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag h2 1`] = `
<h5
  className="title is-5  "
  id=""
>
  Test Text
</h5>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag hr 1`] = `
<hr
  key="0"
  style={Object {}}
/>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag i 1`] = `
<i
  key="0"
  style={Object {}}
>
  Test Text
</i>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag li 1`] = `
<li
  key="0"
  style={Object {}}
>
  Test Text
</li>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag ol 1`] = `
<ol
  key="0"
  style={Object {}}
>
  Test Text
</ol>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag p 1`] = `
<p
  key="0"
  style={Object {}}
>
  Test Text
</p>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag pre 1`] = `
<pre
  key="0"
  style={Object {}}
>
  Test Text
</pre>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag u 1`] = `
<u
  key="0"
  style={Object {}}
>
  Test Text
</u>
`;

exports[`sortTags should match a snapshot and be of correct type for the returned component from domTag ul 1`] = `
<ul
  key="0"
  style={Object {}}
>
  Test Text
</ul>
`;
